# random_variate

./: POC.ipynb  README.md  pyproject.toml
random_variate/: random_variate.py  requirements.txt  testing.ipynb
