[tool.poetry]
name = "simulation"
version = "0.1.0"
description = ""
authors = ["eric <eric.loui@crowdstrike.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
ipykernel = "^6.29.3"
seaborn = "^0.13.2"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
